# goose

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .todo.md  Makefile  README.md  RELEASE_PUBLISH_HANDOVER.md  goose_prd.md  goose_ui_prd.md  pyproject.toml  questions.yaml  testing_improvements.md  todo.md
.github/: copilot-instructions.md
.github/prompts/: decomposition.prompt.md  simplify.prompt.md  system_design.prompt.md
.github/workflows/: ci.yml  landing-pages.yml
app/: main.py  state.py
app/components/: __init__.py  actions.py  common.py  global_error.py  run_controls.py  summary.py  test_details.py
app/components/test_details/: __init__.py  detail_view.py  grid.py  history.py  shared.py
app/services/: test_execution.py
docs/: dashboard.md  getting-started.md  goose-init.md  running-goose.md  testing.md
docs/integrations/: langchain.md
docs/system_designs/: 01_tooling-system-design.md  02_chatting-module.md
example_system/: __init__.py  agent.py  docker-compose.yaml  entrypoint.sh  entrypoints.py  models.py  settings.py  tools.py
example_system/migrations/: 0001_initial.py
example_tests/: __init__.py  agent_behaviour_test.py  conftest.py  test_agent_behaviour.py  test_agent_behaviour_basic.py  test_agent_behaviour_failures.py
goose/: agent_validator.py  cli.py  entrypoints.py  error_type.py  runner.py  testing.py  tools.py  utils.py
goose/api/: __init__.py  app.py  cli.py  config.py  events.py  jobs.py  main.py  routes.py  schema.py
goose/api/jobs/: __init__.py  enums.py  events.py  exceptions.py  job_queue.py  job_target_resolver.py  models.py  service.py  state.py
goose/chatting/: agent_protocol.py  store.py
goose/chatting/api/: router.py  schema.py  streaming.py
goose/core/: __init__.py  app.py  loader.py  reload.py  websocket.py
goose/scaffolding/: cli.py
goose/scaffolding/template/: README.md  app.py  conftest.py
goose/scaffolding/template/tests/: __init__.py  test_example.py
goose/testing/: __init__.py  case.py  cli.py  core.py  discovery.py  engine.py  error_type.py  errors.py  fixtures.py  hooks.py  imports.py  models.py  output.py  retry.py  runner.py  test_case.py  types.py  validator.py
goose/testing/models/: messages.py  tests.py
goose/tooling/: schema.py
goose/tooling/api/: router.py
gooseapp/: .gitignore  app.py
landing/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
landing/public/: robots.txt
landing/src/: config.ts
landing/src/components/sections/: ChatSection.astro  CliCaseSection.astro  DashboardShowcaseSection.astro  FAQSection.astro  FeatureGridSection.astro  FinalCTASection.astro  HeroSection.astro  LoopCloseSection.astro  OpeningScarSection.astro  PresentationChrome.astro  ProblemBeatSection.astro  ProblemSection.astro  PromptOriginSection.astro  QuickstartSection.astro  SiteFooter.astro  SiteHeader.astro  TestingViewSection.astro  ToolingSection.astro  TracesSection.astro  TransitionSlide.astro  ViewsSection.astro
landing/src/components/ui/: ButtonLink.astro  CodeBlock.astro  SectionHeading.astro
landing/src/data/: site.ts
landing/src/layouts/: BaseLayout.astro
landing/src/lib/: paths.ts
landing/src/pages/: appendix.astro  index.astro
landing/src/styles/: globals.css
scripts/: check_forbidden_credential_files.py
tests/: test_cli.py
tests/api/: test_config.py  test_job_queue.py  test_job_store.py  test_persistence.py  test_routes.py
tests/chatting/: __init__.py  test_routes.py  test_store.py  test_streaming_tool_errors.py
tests/core/: test_app.py  test_config.py  test_loader.py
tests/goose/: test_discovery.py  test_fixtures.py  test_runner_and_hooks.py  test_test_case.py
tests/testing/api/: test_job_queue.py  test_job_store.py  test_routes.py
tests/tooling/: test_executor.py  test_routes.py  test_schema.py
web/: .eslintrc.cjs  README.md  cli.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.cli.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  hooks.ts  main.tsx  styles.css
web/src/api/: chatting.ts  client.ts  tooling.ts  types.ts
web/src/components/: CodeBlock.tsx  GlobalError.tsx  Header.tsx  LoadingDots.tsx  MessageCards.tsx  RunControls.tsx  Summary.tsx  SummaryMetricCard.tsx  SurfaceCard.tsx  TestCard.tsx  TestDetail.tsx  TestGrid.tsx  Toast.tsx
web/src/components/chatting/: AgentSelector.tsx  ChatPanel.tsx  ConversationList.tsx  MessageInput.tsx  index.ts
web/src/components/tooling/: InvokeForm.tsx  InvokeResult.tsx  ToolCard.tsx  ToolDetail.tsx  ToolList.tsx  index.ts
web/src/context/: ChattingViewStateContext.tsx  GlobalErrorContext.tsx  TestingViewStateContext.tsx  ToolingPrefsContext.tsx  ToolingViewStateContext.tsx
web/src/utils/: errors.ts  syntaxHighlight.ts
web/src/views/: ChattingView.tsx  TestingView.tsx  ToolingView.tsx
