[project]
name = "goose-llm"
version = "0.1.0"
description = "LLM testing framework for validating agent behavior and tool usage"
license = "MIT"
authors = [{ name = "Rafał Łazicki", email = "rafal.lazicki99@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.4",
    "langchain-openai>=0.1.0",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
core = [
    "langchain>=1.0.4",
    "langchain-openai>=0.1.0",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
]
example = [
    "django>=5.2.8",
    "psycopg[binary]>=3.2.12",
    "streamlit>=1.40.0",
    "typer>=0.20.0",
]
dev = [
    "absolufy-imports>=0.3.1",
    "pre-commit>=4.4.0",
    "black>=25.9.0",
    "autoflake>=2.3.1",
    "isort>=7.0.0",
    "pyupgrade>=3.21.1",
    "pylint>=4.0.2",
    "mypy>=1.18.2",
    "twine>=6.2.0",
    "django-stubs[compatible-mypy]>=5.2.7",
]

[project.scripts]
chat = "example_system.entrypoints:chat"
ask = "example_system.entrypoints:ask"
goose-tests = "goose.runner:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["goose*"]

[tool.setuptools.package-data]
goose = ["**/*.py"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pylint.main]
max-line-length = 120
disable = ["too-few-public-methods"]

[tool.pylint.format]
max-line-length = 120

[tool.bandit]
skips = ["B101"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "example_system.settings"
